--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* docs/gst/gstreamer-sections.txt:
+	  remove mention of removed functions
+	* docs/gst/tmpl/gstbuffer.sgml:
+	* docs/gst/tmpl/gstutils.sgml:
+	* gst/gstutils.c:
+	* gst/gstutils.h:
+	  move buffer_stamp and _merge
+
 2005-02-11  Wim Taymans  <wim@fluendo.com>
 
 	* docs/design/part-clocks.txt:
