--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 2005-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* docs/gst/gstreamer-sections.txt:
+	* docs/gst/tmpl/gstbuffer.sgml:
+	* docs/gst/tmpl/gstevent.sgml:
+	* docs/gst/tmpl/gstpipeline.sgml:
+	* gst/gstbuffer.c:
+	* gst/gstbuffer.h:
+	* gst/gstutils.c:
+	* gst/gstutils.h:
+	  remove buffer_join and keep buffer_merge but move to gstutils
+
+2005-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* docs/gst/gstreamer-sections.txt:
 	  remove mention of removed functions
 	* docs/gst/tmpl/gstbuffer.sgml:
 	* docs/gst/tmpl/gstutils.sgml:
