--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-16  Andy Wingo  <wingo@pobox.com>
+
+	* gst/elements/gstfakesink.c (gst_fakesink_loop)
+	(gst_fakesink_chain_unlocked, gst_fakesink_activate): New
+	functions.
+	(gst_fakesink_chain): Use chain_unlock.
+
 2005-02-16  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* check/Makefile.am:
